# lkmodel

./: .gitignore  Cargo.toml  Makefile  README.md  Repo.toml  Repo1.toml  lk.toml
allocator/: README.md
allocator/allocator/: Cargo.toml
app_bin_loader/rt_bin_loader/: Cargo.toml
app_helloworld/rt_helloworld/: Cargo.toml
app_helloworld/rt_helloworld/src/: main.rs
app_loader/rt_loader/: Cargo.toml  readme.md
app_loader/rt_loader/src/: main.rs
app_memtest/rt_memtest/: Cargo.toml
app_memtest/rt_memtest/src/: main.rs
apps/rt_helloworld/: Cargo.toml
arch_boot/: README.json  README.md
arch_boot/arch_boot/: Cargo.toml  build.rs
arch_boot/arch_boot/src/: lib.rs
arch_boot/arch_boot/src/platform/: mod.rs
arch_boot/arch_boot/src/platform/aarch64_qemu_virt/: boot.rs  desc.rs  mod.rs
arch_boot/arch_boot/src/platform/loongarch64_qemu_virt/: boot.rs  mod.rs
arch_boot/arch_boot/src/platform/riscv64_qemu_virt/: boot.rs  mod.rs
arch_boot/arch_boot/src/platform/um/: mod.rs
arch_boot/arch_boot/src/platform/x86_pc/: boot.rs  mod.rs  multiboot.S
axalloc/: README.md
axalloc/axalloc/: Cargo.toml
axalloc/axalloc/src/: lib.rs
axalloc/rt_axalloc/: Cargo.toml
axalloc/rt_axalloc/src/: main.rs
axconfig/: README.md
axconfig/axconfig/: build.rs
axconfig/rt_axconfig/: Cargo.toml
axconfig/rt_axconfig/src/: main.rs
axdriver/: README.md
axdriver/axdriver/: Cargo.toml  build.rs
axdriver/axdriver/src/: lib.rs
axdtb/: README.json  README.md
axdtb/axdtb/: Cargo.toml
axerrno/: README.md
axfile/: README.md
axfile/axfile/: Cargo.toml
axfile/axfile/src/: fops.rs  lib.rs
axfile/axfile/src/api/: dir.rs  file.rs  mod.rs
axfs_devfs/: README.md
axfs_devfs/axfs_devfs/: Cargo.toml
axfs_ramfs/: README.md
axfs_ramfs/axfs_ramfs/: Cargo.toml
axfs_vfs/: README.md
axfs_vfs/axfs_vfs/: Cargo.toml
axhal/: README.md
axhal/axhal/: Cargo.toml
axhal/rt_axhal/: Cargo.toml
axhal/rt_axhal/src/: lib.rs  main.rs
axio/: README.md
axio/axio/: Cargo.toml
axlog2/: README.md
axlog2/axlog2/: Cargo.toml
axlog2/axlog2/src/: lib.rs
axlog2/rt_axlog2/: Cargo.toml  README.md
axlog2/rt_axlog2/src/: main.rs
axmount/: README.md
axmount/axmount/: Cargo.toml
axmount/axmount/src/: lib.rs  mounts.rs
axmount/axmount/src/fs/: ext2fs.rs  fatfs.rs  mod.rs  path.rs
axmount/axmount/src/fs/ext2fs/: body.rs  tools.rs
axmount/axmount/src/fs/ext2fs/body/: directory_entry.rs  inode.rs  typeperm.rs
axmount/axmount/src/fs/ext2fs/header/: superblock.rs
axmount/rt_axmount/: Cargo.toml
axmount/test_axmount/: Cargo.toml
axmount/test_axmount_001/: Cargo.toml
axstd/: readme.md
axstd/axruntime/: Cargo.toml
axstd/axruntime/src/: lang_items.rs  lib.rs
axstd/axstd/: Cargo.toml
axstd/axstd/src/: lib.rs  vm.rs
axstd/axstd/src/io/: mod.rs  stdio.rs
axsyscall/: README.md
axsyscall/axsyscall/: Cargo.toml
axsyscall/axsyscall/src/: lib.rs
axtrap/: README.md
axtrap/axtrap/: Cargo.toml
axtrap/axtrap/src/: irq.rs  lib.rs
axtrap/axtrap/src/arch/riscv/: mod.rs  trap.S
axtrap/axtrap/src/arch/x86_64/: idt.rs  mod.rs  syscall.rs
axtrap/axtrap/src/platform/: dummy.rs
axtrap/axtrap/src/platform/riscv64_qemu_virt/: irq.rs
axtrap/axtrap/src/platform/x86_pc/: idt.rs  irq.rs  mod.rs
axtrap/rt_axtrap/: Cargo.toml
axtrap/rt_axtrap/src/: main.rs
axtype/: README.md
axtype/axtype/: Cargo.toml
bprm_loader/: README.md
bprm_loader/bprm_loader/: Cargo.toml
bprm_loader/bprm_loader/src/: lib.rs
bprm_loader/rt_bprm_loader/: Cargo.toml  expect_output
btp/: Makefile  README.md  btp_tests  devfs.c  execl.c  init.c  mkdir.c  mmap.c  mount.c  procfs.c  run.c  runbtp.c  signal.c  syscalls  vfork.c
btp/etc/: fstab
capability/: README.md
capability/capability/: Cargo.toml
driver_block/: README.md
driver_block/driver_block/: Cargo.toml
driver_block/rt_driver_block/: Cargo.toml
driver_common/: README.md
driver_pci/: README.md
driver_virtio/: README.md
driver_virtio/driver_virtio/: Cargo.toml
driver_virtio/driver_virtio/src/: lib.rs
driver_virtio/rt_driver_virtio/: Cargo.toml
driver_virtio/rt_driver_virtio/src/: lib.rs  main.rs
early_console/: README.json  README.md
early_console/early_console/: Cargo.toml  build.rs
early_console/early_console/src/: lib.rs  time.rs
early_console/early_console/src/platform/riscv64_qemu_virt/: mod.rs  time.rs
early_console/early_console/src/platform/x86_pc/: mod.rs  time.rs  uart16550.rs
early_console/rt_early_console/: Cargo.toml
early_console/rt_early_console/src/: lib.rs  main.rs
elf/: README.md
exec/: README.md
exec/exec/: Cargo.toml
exec/exec/src/: lib.rs
exec/rt_exec/: Cargo.toml
exec/rt_exec/src/: lib.rs  main.rs  mp.rs
fileops/: README.md
fileops/fileops/: Cargo.toml
fileops/fileops/src/: lib.rs  proc_ops.rs
fileops/rt_fileops/: Cargo.toml
fileops/rt_fileops/src/: main.rs
filetable/: README.md
filetable/filetable/: Cargo.toml
filetable/filetable/src/: lib.rs
fork/fork/: Cargo.toml
fork/fork/src/: lib.rs
fork/fork/src/arch/: riscv.rs  x86_64.rs
fork/rt_fork/: Cargo.toml
fstree/: README.md
fstree/fstree/: Cargo.toml
fstree/rt_fstree/: Cargo.toml
handler_table/: README.md
kernel_guard_base/: README.md
kernel_guard_base/kernel_guard_base/: Cargo.toml
lazy_init/: README.md
macrokernel/: README.md
macrokernel/rt_macrokernel/: Cargo.toml
memory_addr/: README.md
mm/mm/: Cargo.toml
mm/rt_mm/: Cargo.toml
mmap/: README.md
mmap/mmap/: Cargo.toml
mmap/rt_mmap/: Cargo.toml
modules/axconfig/: build.rs
mutex/: README.md
mutex/mutex/: Cargo.toml
mutex/rt_mutex/: Cargo.toml
page_table/: README.md
page_table/page_table/: Cargo.toml
percpu2/: README.md
pflash/: README.md
preempt_guard/: README.md
proj/: build.rs  tpl_Cargo.toml
ratio/: README.md
reports/: readme.md
run_queue/: README.md
rust_fatfs/: README.md
scheduler/: README.md
spinbase/: README.md
spinpreempt/: README.md
taskctx/: README.md
tour_stage/: .gitignore  README.md
user_stack/: README.md
userboot/: README.md
wait_queue/: README.md
(+233 files in other folders)
