[workspace]
resolver = "2"
members = ["proj"]

[profile.release]
lto = true

[patch."ssh://git@github.com/shilei-massclouds/arch_boot"]
arch_boot = { path = "./arch_boot/arch_boot" }

[patch."ssh://git@github.com/shilei-massclouds/axconfig"]
axconfig = { path = "./axconfig/axconfig" }

[patch."ssh://git@github.com/shilei-massclouds/axhal"]
axhal = { path = "./axhal/axhal" }

[patch."ssh://git@github.com/shilei-massclouds/early_console"]
early_console = { path = "./early_console/early_console" }
rt_early_console = { path = "./early_console/rt_early_console" }

[patch."ssh://git@github.com/shilei-massclouds/fork"]
fork = { path = "./fork/fork" }

[patch."ssh://git@github.com/shilei-massclouds/macrokernel"]
rt_macrokernel = { path = "./macrokernel/rt_macrokernel" }

[patch."ssh://git@github.com/shilei-massclouds/allocator"]
allocator = { path = "./allocator/allocator" }

[patch."ssh://git@github.com/shilei-massclouds/axalloc"]
axalloc = { path = "./axalloc/axalloc" }

[patch."ssh://git@github.com/shilei-massclouds/axerrno"]
axerrno = { path = "./axerrno/axerrno" }

[patch."ssh://git@github.com/shilei-massclouds/axlog2"]
axlog2 = { path = "./axlog2/axlog2" }

[patch."ssh://git@github.com/shilei-massclouds/kernel_guard_base"]
kernel_guard_base = { path = "./kernel_guard_base/kernel_guard_base" }

[patch."ssh://git@github.com/shilei-massclouds/lazy_init"]
lazy_init = { path = "./lazy_init/lazy_init" }

[patch."ssh://git@github.com/shilei-massclouds/memory_addr"]
memory_addr = { path = "./memory_addr/memory_addr" }

[patch."ssh://git@github.com/shilei-massclouds/page_table"]
page_table = { path = "./page_table/page_table" }
page_table_entry = { path = "./page_table/page_table_entry" }

[patch."ssh://git@github.com/shilei-massclouds/percpu2"]
percpu2 = { path = "./percpu2/percpu2" }

[patch."ssh://git@github.com/shilei-massclouds/ratio"]
ratio = { path = "./ratio/ratio" }

[patch."ssh://git@github.com/shilei-massclouds/spinbase"]
spinbase = { path = "./spinbase/spinbase" }

[patch."ssh://git@github.com/shilei-massclouds/axdriver"]
axdriver = { path = "./axdriver/axdriver" }

[patch."ssh://git@github.com/shilei-massclouds/axio"]
axio = { path = "./axio/axio" }

[patch."ssh://git@github.com/shilei-massclouds/capability"]
capability = { path = "./capability/capability" }

[patch."ssh://git@github.com/shilei-massclouds/driver_block"]
driver_block = { path = "./driver_block/driver_block" }

[patch."ssh://git@github.com/shilei-massclouds/driver_common"]
driver_common = { path = "./driver_common/driver_common" }

[patch."ssh://git@github.com/shilei-massclouds/elf"]
elf = { path = "./elf/elf" }

[patch."ssh://git@github.com/shilei-massclouds/handler_table"]
handler_table = { path = "./handler_table/handler_table" }

[patch."ssh://git@github.com/shilei-massclouds/scheduler"]
scheduler = { path = "./scheduler/scheduler" }

[patch."ssh://git@github.com/shilei-massclouds/taskctx"]
taskctx = { path = "./taskctx/taskctx" }
