[package]
name = "arceos-memtest"
version = "0.1.0"
edition = "2021"
authors = ["waterm310n <wat3rmelon2000@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["axstd"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
axstd = { path = "../../axstd/axstd", features = ["alloc"], optional = true }