[package]
name = "arch_boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
smp = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
# sbi-rt = { version = "0.0.2", features = ["legacy"] }
sbi-rt = { git = "ssh://git@github.com/waterm310n/sbi-rt.git" ,features = ["legacy"]}

[target.'cfg(target_arch = "aarch64")'.dependencies]
bitflags = "2.2"
aarch64-cpu = "9.3"
tock-registers = "0.8"

[build-dependencies]
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }
