[package]
name = "axfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axio = { git = "ssh://git@github.com/shilei-massclouds/axio.git" }
axerrno = { git = "ssh://git@github.com/shilei-massclouds/axerrno.git" }
axfs_vfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_vfs.git" }
capability = { git = "ssh://git@github.com/shilei-massclouds/capability.git" }
fstree = { git = "ssh://git@github.com/shilei-massclouds/fstree.git" }
