[package]
name = "rt_axhal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_boot = { git = "ssh://git@github.com/shilei-massclouds/arch_boot.git" }
axhal = { git = "ssh://git@github.com/shilei-massclouds/axhal.git" }
axlog2 = { git = "ssh://git@github.com/shilei-massclouds/axlog2.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }
axalloc = { git = "ssh://git@github.com/shilei-massclouds/axalloc.git" }
page_table = { git = "ssh://git@github.com/shilei-massclouds/page_table" }
