[package]
name = "axmount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
devfs = []
ramfs = []
procfs = []
sysfs = []
fatfs = []
use-ramdisk = []

default = ["devfs", "ramfs", "fatfs", "procfs", "sysfs"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
axdriver = { git = "ssh://git@github.com/shilei-massclouds/axdriver.git" }
mutex = { git = "ssh://git@github.com/shilei-massclouds/mutex.git" }
axfs_devfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_devfs.git" }
axfs_ramfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_ramfs.git" }
axfs_vfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_vfs.git" }
lazy_init = { git = "ssh://git@github.com/shilei-massclouds/lazy_init.git" }
rust_fatfs = { git = "ssh://git@github.com/shilei-massclouds/rust_fatfs.git" }
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig" }
