[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"

[features]

alloc = [] # 默认使用tlsf分配器
paging = ["axhal/paging", "lazy_init"]

[dependencies]
arch_boot = { git = "ssh://git@github.com/shilei-massclouds/arch_boot.git" }
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig" }
page_table = { git = "ssh://git@github.com/shilei-massclouds/page_table" }
task = { git = "ssh://git@github.com/shilei-massclouds/task.git" }
fork = { git = "ssh://git@github.com/shilei-massclouds/fork.git" }
run_queue = { git = "ssh://git@github.com/shilei-massclouds/run_queue.git" }
axlog = { package = "axlog2" ,git = "ssh://git@github.com/shilei-massclouds/axlog2.git" }
axhal = { git = "ssh://git@github.com/shilei-massclouds/axhal" }
axalloc = { git = "ssh://git@github.com/shilei-massclouds/axalloc" }
lazy_init = { git = "ssh://git@github.com/shilei-massclouds/lazy_init.git" ,optional = true}
axtrap = { git = "ssh://git@github.com/shilei-massclouds/axtrap.git" }
taskctx = { git = "ssh://git@github.com/shilei-massclouds/taskctx.git" }