[package]
name = "axstd"
version = "0.1.0"
edition = "2021"

[features]
default = []
alloc = ["axruntime/alloc"]


[dependencies]
axio = { git = "ssh://git@github.com/shilei-massclouds/axio.git" }
axlog2 = { git = "ssh://git@github.com/shilei-massclouds/axlog2.git" }
arch_boot = { git = "ssh://git@github.com/shilei-massclouds/arch_boot.git" }
axalloc = { git = "ssh://git@github.com/shilei-massclouds/axalloc" }
axruntime = { path = "../axruntime"}