[package]
name = "early_console"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS hardware abstraction layer, provides unified APIs for platform-specific operations"
license = "GPL-3.0-or-later OR Apache-2.0"

[features]
#smp = []
#alloc = []
#fp_simd = []
#paging = ["axalloc", "page_table"]
#irq = []
#tls = ["alloc"]
monolithic = []
default = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
spinbase = { git = "ssh://git@github.com/shilei-massclouds/spinbase.git" }
bitflags = "2.2"
#static_assertions = "1.1.0"
#axlog = { path = "../axlog" }
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }
#axalloc = { path = "../axalloc", optional = true }
#kernel_guard = { path = "../../crates/kernel_guard" }
#spinlock = { path = "../../crates/spinlock" }
#ratio = { path = "../../crates/ratio" }
#lazy_init = { path = "../../crates/lazy_init" }
#page_table = { path = "../../crates/page_table", optional = true }
#page_table_entry = { path = "../../crates/page_table_entry" }
#percpu2 = { path = "../../crates/percpu2" }
#memory_addr = { path = "../../crates/memory_addr" }
#handler_table = { path = "../../crates/handler_table" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
#x86 = "0.52"
x86_64 = "0.14"
#x2apic = "0.4"
#raw-cpuid = "11.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

#[target.'cfg(target_arch = "aarch64")'.dependencies]
#aarch64-cpu = "9.3"
#tock-registers = "0.8"
#arm_gic = { path = "../../crates/arm_gic" }
#arm_pl011 = { path = "../../crates/arm_pl011" }
#dw_apb_uart = { path = "../../crates/dw_apb_uart" }

[build-dependencies]
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }
