[package]
name = "early_console"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS hardware abstraction layer, provides unified APIs for platform-specific operations"
license = "GPL-3.0-or-later OR Apache-2.0"

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "2.2"
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
spinbase = { git = "ssh://git@github.com/shilei-massclouds/spinbase.git" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
# sbi-rt = { version = "0.0.2", features = ["legacy"] }
sbi-rt = { git = "ssh://git@github.com/waterm310n/sbi-rt.git" ,features = ["legacy"]}

#[target.'cfg(target_arch = "aarch64")'.dependencies]
#aarch64-cpu = "9.3"
#tock-registers = "0.8"
#arm_gic = { path = "../../crates/arm_gic" }
#arm_pl011 = { path = "../../crates/arm_pl011" }
#dw_apb_uart = { path = "../../crates/dw_apb_uart" }

[build-dependencies]
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }
