[package]
name = "rt_exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]
#default = ["axhal/irq", "percpu2", "preempt_guard"]

[dependencies]
arch_boot = { git = "ssh://git@github.com/shilei-massclouds/arch_boot.git" }
axhal = { git = "ssh://git@github.com/shilei-massclouds/axhal.git" }
axtrap = { git = "ssh://git@github.com/shilei-massclouds/axtrap.git" }
axalloc = { git = "ssh://git@github.com/shilei-massclouds/axalloc.git" }
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }
axlog2 = { git = "ssh://git@github.com/shilei-massclouds/axlog2.git" }
axsyscall = { git = "ssh://git@github.com/shilei-massclouds/axsyscall.git" }
task = { git = "ssh://git@github.com/shilei-massclouds/task.git" }
taskctx = { git = "ssh://git@github.com/shilei-massclouds/taskctx" }
run_queue = { git = "ssh://git@github.com/shilei-massclouds/run_queue.git" }
axdriver = { git = "ssh://git@github.com/shilei-massclouds/axdriver.git" }
axmount = { git = "ssh://git@github.com/shilei-massclouds/axmount.git" }
percpu2 = { git = "ssh://git@github.com/shilei-massclouds/percpu2.git" }
fork = { git = "ssh://git@github.com/shilei-massclouds/fork.git" }
exec = { git = "ssh://git@github.com/shilei-massclouds/exec.git" }
axerrno = { git = "ssh://git@github.com/shilei-massclouds/axerrno.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
axdtb = { git = "ssh://git@github.com/shilei-massclouds/axdtb.git" }
preempt_guard = { git = "ssh://git@github.com/shilei-massclouds/preempt_guard.git" }
page_table = { git = "ssh://git@github.com/shilei-massclouds/page_table" }
fileops = { git = "ssh://git@github.com/shilei-massclouds/fileops" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.0"
