[package]
name = "filetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axfile = { git = "ssh://git@github.com/shilei-massclouds/axfile.git" }
mutex = { git = "ssh://git@github.com/shilei-massclouds/mutex.git" }
spinpreempt  = { git = "ssh://git@github.com/shilei-massclouds/spinpreempt.git" }
