[package]
name = "fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "2.2"
task = { git = "ssh://git@github.com/shilei-massclouds/task.git" }
mm = { git = "ssh://git@github.com/shilei-massclouds/mm.git" }
taskctx = { git = "ssh://git@github.com/shilei-massclouds/taskctx.git" }
run_queue = { git = "ssh://git@github.com/shilei-massclouds/run_queue.git" }
axerrno = { git = "ssh://git@github.com/shilei-massclouds/axerrno.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
spinbase = { git = "ssh://git@github.com/shilei-massclouds/spinbase.git" }
axhal = { git = "ssh://git@github.com/shilei-massclouds/axhal.git" }
